# AI-Agents

Ai-translator-app/: app.py  pyproject.toml  requirements.txt
BasicChatbot/: .gitignore  basicchatbot.ipynb  main.py  pyproject.toml  requirements.txt
ai-scraper/: .gitignore  README.md  ai_scraper.py  pyproject.toml  requirements.txt
audispot_content_writer/: .gitignore  README.md  app.py  audispot_content_agent.py  pyproject.toml  requirements.txt
content_writer/: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  FIX_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  app.py  check_env.py  content_agent.py  pyproject.toml  requirements.txt  setup.py
deep_research_agent/: .gitignore  =1.0  =2.0  =4.5.0  lab_a.ipynb  lab_b.ipynb  pyproject.toml  requirements.txt
deep_research_agent/deep-research/: planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
extract_pdf/: data_extraction_llms.ipynb  main.py  pyproject.toml
extract_pdf/app/: functions.py  requirements.txt  streamlit_app.py
extract_pdf/app/db/: chroma.sqlite3
extract_pdf/vectorstore_chroma/: chroma.sqlite3
extract_pdf/vectorstore_db/: chroma.sqlite3
extract_pdf/vectorstore_test/: chroma.sqlite3
langchain_rag_pract/: main.py  pyproject.toml
local_agent_rag/: .gitignore  luxdev_course_outline.md  main.py  pyproject.toml  vector.py
mcplangchain/: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
web-browsing-agent/: airbnb.py  browser.py  pyproject.toml  requirements.txt
