[project]
name = "ai-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.3.7",
    "langchain-text-splitters>=0.3.9",
    "lxml>=6.0.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "streamlit>=1.48.1",
    "unstructured>=0.18.13",
    "webdriver-manager>=4.0.2",
]
