[project]
name = "local-agent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-ollama>=0.3.6",
    "markdown>=3.8.2",
    "pandas>=2.3.1",
]
